--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pixApi?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/apipix?useTimezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=
-server.port=8081
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
 api.security.token.secret=${JWT_SECRET:my-secret-key}
-spring.security.user.name=admin
-spring.security.user.password=secretpassword
